function workinggit add .git add .

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
 body {
-    background-color: #93E5AB;
+    background-color: brown;
     color: #EBF2FA;
 }
 
 button {
     display: inline-block;
     border-radius: 4px;
-    background-color: #28a745;
+    background-color: aqua;
     border: none;
     color: #FFFFFF;
     text-align: center;
@@ -18,15 +18,16 @@ button {
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
+    font-family: 'Langar', sans-serif;
 }
 
 h1 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #93E5AB;
+    font-family: 'Langar', sans-serif;
+    color: saddlebrown;
 }
 
 h3 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Langar', sans-serif;
 }
 
 p {
